--- a/Riskvalve/Views/Home/Detail.cshtml
+++ b/Riskvalve/Views/Home/Detail.cshtml
@@ -18,8 +18,9 @@
                 <div class="row ">
                     <div class="col-md-12">
                         <form class="filter-area">
-                            <select id="ddlBusinessArea" class="form-select form-select-sm filter-select" aria-label="Small select example">
-                               <option value="">All Area</option>
+                            <select id="ddlBusinessArea" class="form-select form-select-sm filter-select"
+                                aria-label="Small select example">
+                                <option value="">All Area</option>
                                 @if (areaList != null)
                                 {
                                     foreach (var item in areaList)
@@ -28,21 +29,26 @@
                                     }
                                 }
                             </select>
-                            <select id="ddlPlatform" class="form-select form-select-sm filter-select" aria-label="Small select example">
+                            <select id="ddlPlatform" class="form-select form-select-sm filter-select"
+                                aria-label="Small select example">
                                 <option selected>All Platform</option>
                             </select>
-                            <a class="btn btn-outline-dark btn-sm" id="btnFilter" style="margin-right: 32px;"><i class="bi bi-search"></i> Filter</a>
-                            <a class="btn btn-outline-dark btn-sm" id="btnExcel"><i class="bi bi-file-earmark-excel"></i> Export to Excel</a>
+                            <a class="btn btn-outline-dark btn-sm" id="btnFilter" style="margin-right: 32px;"><i
+                                    class="bi bi-search"></i> Filter</a>
+                            <a class="btn btn-outline-dark btn-sm" id="btnExcel"><i
+                                    class="bi bi-file-earmark-excel"></i> Export to Excel</a>
                             <div style="flex:1;"></div>
                             <div class="input-group input-group-sm input-search">
                                 <span class="input-group-text" id="basic-addon1">
-                                <i class="bi bi-search"></i>
+                                    <i class="bi bi-search"></i>
                                 </span>
-                                <input type="text" class="form-control form-control-sm" placeholder="Search" oninput="dataTableSearch(this.value)">
+                                <input type="text" class="form-control form-control-sm" placeholder="Search"
+                                    oninput="dataTableSearch(this.value)">
                             </div>
                         </form>
 
-                        <table class="table table-bordered datatable datatable-custom datatable-invert" style="width: 100%;">
+                        <table class="table table-bordered datatable datatable-custom datatable-invert"
+                            style="width: 100%;">
                             <thead>
                                 <tr>
                                     <th>No</th>
@@ -80,16 +86,17 @@
                                                 lastInspectionDate = @item.lastInspection.InspectionDate;
                                                 lastInspectionID = @item.lastInspection.Id;
                                             }
-                                            if(item.lastMaintenance != null)
+                                            if (item.lastMaintenance != null)
                                             {
                                                 lastMaintenanceID = @item.lastMaintenance.Id;
                                             }
-                                            if(item.lastAssessment != null)
+                                            if (item.lastAssessment != null)
                                             {
                                                 lastAssessmentID = @item.lastAssessment.Id;
                                                 assessmentTimeToAction = @item.lastAssessment.TPTimeToActionRisk;
                                                 assessmentRisk = @item.lastAssessment.RiskMax;
-                                                assessmentRiskColor = new AssessmentModel().GetHeatColor(assessmentRisk);
+                                                assessmentRiskColor = "status-box " + new
+                                                AssessmentModel().GetHeatColor(assessmentRisk);
                                             }
                                             ctr++;
                                             <tr>
@@ -105,15 +112,21 @@
                                                 <td>@lastInspectionDate</td>
                                                 <td>
                                                     <div class="risk-status-item">
-                                                        <div class="status-box @assessmentRiskColor"></div>
+                                                        <div class="@assessmentRiskColor"></div>
                                                         <div>@assessmentRisk</div>
                                                     </div>
                                                 </td>
                                                 <td>@assessmentTimeToAction</td>
                                                 <td class="nowrap">
-                                                    <a class="btn btn-light btn-sm" asp-controller="Assessment" asp-action="Index" asp-route-assetid="@item.Id" asp-route-assessmentid="@lastAssessmentID" target="_blank">Assessment</a>
-                                                    <a class="btn btn-light btn-sm" asp-controller="Inspection" asp-action="Index" asp-route-assetid="@item.Id" asp-route-inspectionid="@lastInspectionID" target="_blank">Inspection</a>
-                                                    <a class="btn btn-light btn-sm" asp-controller="Maintenance" asp-action="Index" asp-route-assetid="@item.Id" asp-route-maintenanceid="@lastMaintenanceID" target="_blank">Maintenance</a>
+                                                    <a class="btn btn-light btn-sm" asp-controller="Assessment" asp-action="Index"
+                                                        asp-route-assetid="@item.Id" asp-route-assessmentid="@lastAssessmentID"
+                                                        target="_blank">Assessment</a>
+                                                    <a class="btn btn-light btn-sm" asp-controller="Inspection" asp-action="Index"
+                                                        asp-route-assetid="@item.Id" asp-route-inspectionid="@lastInspectionID"
+                                                        target="_blank">Inspection</a>
+                                                    <a class="btn btn-light btn-sm" asp-controller="Maintenance" asp-action="Index"
+                                                        asp-route-assetid="@item.Id" asp-route-maintenanceid="@lastMaintenanceID"
+                                                        target="_blank">Maintenance</a>
                                                 </td>
                                             </tr>
                                         }
@@ -144,6 +157,25 @@
 
         initDatatable(dataTableOptions)
 
+        function getHeatColor(pos) {
+            var olivePositions = ["1A", "2A", "1B"];
+            var greenPositions = ["3A", "2B", "1C"];
+            var yellowPositions = ["4A", "3B", "3C", "2C", "1D"];
+            var orangePositions = ["5A", "5B", "4B", "4C", "3D", "2D", "2E", "1E"];
+
+            if (olivePositions.includes(pos)) {
+                return "olive";
+            } else if (greenPositions.includes(pos)) {
+                return "green";
+            } else if (yellowPositions.includes(pos)) {
+                return "yellow";
+            } else if (orangePositions.includes(pos)) {
+                return "orange";
+            } else {
+                return "red";
+            }
+        }
+
         $(document).ready(function () {
             $('#ddlBusinessArea').on('change', function () {
                 var areaId = $(this).val();
@@ -172,6 +204,27 @@
                         $(".datatable").DataTable().destroy();
                         $('#table-detail').html('');
                         $.each(data, function (i, item) {
+                            var itemid = item.id;
+                            var lastInspectionDate = "No inspection history";
+                            var lastInspectionID = 0;
+                            var lastMaintenanceID = 0;
+                            var lastAssessmentID = 0;
+                            var assessmentTimeToAction = "No assessment history";
+                            var assessmentRisk = "";
+                            var assessmentRiskColor = "";
+                            if (item.lastInspection != null) {
+                                lastInspectionDate = item.lastInspection.inspectionDate;
+                                lastInspectionID = item.lastInspection.id;
+                            }
+                            if (item.lastMaintenance != null) {
+                                lastMaintenanceID = item.lastMaintenance.id;
+                            }
+                            if (item.lastAssessment != null) {
+                                lastAssessmentID = item.lastAssessment.id;
+                                assessmentTimeToAction = item.lastAssessment.tpTimeToActionRisk;
+                                assessmentRisk = item.lastAssessment.riskMax;
+                                assessmentRiskColor = "status-box " + getHeatColor(assessmentRisk);
+                            }
                             var html = `
                                 <tr>
                                     <td>${i + 1}</td>
@@ -183,20 +236,20 @@
                                     <td>${item.classRating}</td>
                                     <td>${item.pidNo}</td>
                                     <td>${item.parentEquipmentNo}</td>
-                                    <td>1-Jan-2030</td>
+                                    <td>${lastInspectionDate}</td>
                                     <td>
                                         <div class="risk-status-item">
-                                            <div class="status-box"></div>
-                                            <div>--</div>
+                                            <div class="${assessmentRiskColor}"></div>
+                                            <div>${assessmentRisk}</div>
                                         </div>
                                     </td>
-                                    <td>1-Jan-2030</td>
+                                    <td>${assessmentTimeToAction}</td>
                                     <td class="nowrap">
-                                        <a class="btn btn-light btn-sm">Assessment</a>
-                                        <a class="btn btn-light btn-sm">Inspection</a>
-                                        <a class="btn btn-light btn-sm">Maintenance</a>
+                                        <a class="btn btn-light btn-sm" asp-controller="Assessment" asp-action="Index" asp-route-assetid="${itemid}" asp-route-assessmentid="${lastAssessmentID}" target="_blank">Assessment</a>
+                                        <a class="btn btn-light btn-sm" asp-controller="Inspection" asp-action="Index" asp-route-assetid="${itemid}" asp-route-inspectionid="${lastInspectionID}" target="_blank">Inspection</a>
+                                        <a class="btn btn-light btn-sm" asp-controller="Maintenance" asp-action="Index" asp-route-assetid="${itemid}" asp-route-maintenanceid="${lastMaintenanceID}" target="_blank">Maintenance</a>
                                     </td>
-                                </tr>`
+                                </tr>`;
                             $('#table-detail').append(html);
                         });
                         initDatatable(dataTableOptions)
@@ -205,8 +258,8 @@
             });
         });
 
-            $('#btnExcel').on('click', () => {
-                $('.dt-button.buttons-excel').trigger('click')
-            })
+        $('#btnExcel').on('click', () => {
+            $('.dt-button.buttons-excel').trigger('click')
+        })
     </script>
 }
