--- a/Riskvalve/Views/Tool/ImportAssetRegister.cshtml
+++ b/Riskvalve/Views/Tool/ImportAssetRegister.cshtml
@@ -1,6 +1,7 @@
 @{
     ViewData["Title"] = "Import Asset Register";
     var urlimportexcel = Url.Action("ImportExcelFile", "Tool");
+    var urltemplate = Url.Content("~/Uploads/Downloads/AssetTemplate.xlsx");
 }
 
 <div class="container-fluid">
@@ -18,8 +19,7 @@
                         <form>
                             <div class="row g-3 align-items-center">
                                 <div class="col-auto">
-                                    Download the template file <a href="/Uploads/Downloads/AssetTemplate.xlsx"
-                                        target="_blank">here</a>
+                                    Download the template file <a href="@urltemplate" target="_blank">here</a>
                                 </div>
                             </div>
                             <br />
